--- a/three在线选车/three-car/index.html
+++ b/three在线选车/three-car/index.html
@@ -16,24 +16,24 @@
 
         <div class="group">
           <p class="title">车漆颜色</p>
-          <div class="item_wrap" style="margin-top: 20px;">
-            <div>
+          <div class="item_wrap col_group" style="margin-top: 20px;">
+            <div data-col="#ff9900">
               <div class="col" style="background-color: #ff9900;"></div>
               <p>土豪金</p>
             </div>
-            <div>
+            <div data-col="#343a40">
               <div class="col" style="background-color: #343a40;"></div>
               <p>传奇黑</p>
             </div>
-            <div>
+            <div data-col="#409EFF">
               <div class="col" style="background-color: #409EFF;"></div>
               <p>海蓝</p>
             </div>
-            <div>
+            <div data-col="#6600ff">
               <div class="col" style="background-color: #6600ff;"></div>
               <p>玫瑰紫</p>
             </div>
-            <div>
+            <div data-col="#DCDFE6">
               <div class="col" style="background-color: #DCDFE6;"></div>
               <p>银灰色</p>
             </div>
@@ -54,11 +54,11 @@
 
         <div class="group">
           <p class="title">场景切换</p>
-          <div class="item_wrap">
-            <div>
+          <div class="item_wrap scene_group">
+            <div data-poi="展厅">
               <p class="info_btn">展厅</p>
             </div>
-            <div>
+            <div data-poi="户外">
               <p class="info_btn">户外</p>
             </div>
           </div>
@@ -66,14 +66,14 @@
 
         <div class="group">
           <p class="title">视角切换</p>
-          <div class="item_wrap">
-            <div>
+          <div class="item_wrap look_group">
+            <div data-pos="main">
               <p class="info_btn">驾驶位</p>
             </div>
-            <div>
+            <div data-pos="copilot">
               <p class="info_btn">副驾驶</p>
             </div>
-            <div>
+            <div data-pos="outside">
               <p class="info_btn">外观</p>
             </div>
           </div>
