--- a/three在线选车/three-car/index.html
+++ b/three在线选车/three-car/index.html
@@ -42,11 +42,11 @@
 
         <div class="group">
           <p class="title">贴膜切换</p>
-          <div class="item_wrap">
-            <div>
+          <div class="item_wrap coat_group">
+            <div data-coa="高光">
               <p class="info_btn">高光 ¥0</p>
             </div>
-            <div>
+            <div data-coa="磨砂">
               <p class="info_btn">磨砂 ¥20000</p>
             </div>
           </div>
